feat: add comprehensive system audit, productization map, and billing infrastructure
- Complete system-wide architecture audit with module classification
- Add critical gaps analysis and action plan for production readiness
- Introduce billing infrastructure: cost estimation, quota enforcement hooks
- Add productization layer: subscription validation, plan enforcement
- Create database migrations for billing records and unified graph tables
- Enhance state machine with trace emission for observability
- Add domain models for artifact lineage and semantic relationships
- Update module dependencies and project structure documentation